unpackaged/main/default/objects/FSL_Call_Comments__c/FSL_Call_Comments__c.object-meta.xml
<CustomObject>
    <label>FSL Call Comments</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Call Comments Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Call Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>