unpackaged/main/default/objects/FSL_Call_Comments__c/fields/ACG_Case__c.field-meta.xml
<CustomField>
    <fullName>ACG_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Call Comments</relationshipLabel>
    <relationshipName>Call_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>