unpackaged/main/default/objects/FSL_Call_Comments__c/fields/FSL_Comment__c.field-meta.xml
<CustomField>
    <fullName>FSL_Comment__c</fullName>
    <label>Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>