unpackaged/main/default/objects/FSL_Call_Comments__c/fields/FSL_Work_Order__c.field-meta.xml
<CustomField>
    <fullName>FSL_Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipName>Call_Comments</relationshipName>
    <type>Lookup</type>
</CustomField>