unpackaged/main/default/objects/FSL_Call_Comments__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FSL_Work_Order__c</columns>
    <columns>FSL_Comment__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>